suppress unsafe warning